--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 517d42c
-	base = 6ba5da6
+	base = ec3771b
 	trim = diffbot_bringup
-	trimbase = 
+	trimbase = 6ba5da6
