--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 517d42c
-	base = c692d73
+	base = d699567
 	trim = diffbot_msgs
-	trimbase = 
+	trimbase = c692d73
