--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 517d42c
-	base = fc742e1
+	base = aaf2111
 	trim = diffbot_robot
-	trimbase = 
+	trimbase = fc742e1
