--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 517d42c
-	base = 8645d2d
+	base = 57fe592
 	trim = diffbot_control
-	trimbase = 
+	trimbase = 8645d2d
