--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 517d42c
-	base = de55d5d
+	base = 92b5e69
 	trim = diffbot_navigation
-	trimbase = 
+	trimbase = de55d5d
