--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 517d42c
-	base = 8fef42b
+	base = 074bdc8
 	trim = diffbot_base
-	trimbase = 
+	trimbase = 8fef42b
