--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 517d42c
-	base = 0cd02b4
+	base = c977bbb
 	trim = diffbot_slam
-	trimbase = 
+	trimbase = 0cd02b4
