--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 517d42c
-	base = bdaa7cd
+	base = aa27c46
 	trim = diffbot_mbf
-	trimbase = 
+	trimbase = bdaa7cd
