--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 517d42c
-	base = 0c21678
+	base = 3b0f158
 	trim = diffbot_gazebo
-	trimbase = 
+	trimbase = 0c21678
