--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 517d42c
-	base = 3650a40
+	base = 3ada9b7
 	trim = diffbot_description
-	trimbase = 
+	trimbase = 3650a40
